Fix JMX metric tracking and support MBeans added at runtime (#900)